# hass-desk2ha

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  hacs.json  pyproject.toml
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  hacs-pr-ready.yml  hacs.yml  release-readiness.yml  release.yml
custom_components/desk2ha/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  discovery.py  entity.py  helpers.py  install_server.py  light.py  manifest.json  media_player.py  number.py  policy_store.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  update.py
custom_components/desk2ha/blueprints/automation/: away_lock.yaml  disk_space_alert.yaml  (+5 more)
custom_components/desk2ha/card/: desk2ha-card.js
custom_components/desk2ha/images/: __init__.py  cache.py  resolver.py  serve.py
custom_components/desk2ha/lifecycle/: __init__.py  remote_install.py
custom_components/desk2ha/sources/: __init__.py
custom_components/desk2ha/translations/: de.json  en.json
docs/: ARCHITECTURE.md  CONCEPT-peripheral-controls.md  GETTING_STARTED.md  MQTT_SETUP.md  desk2ha-grobkonzept.md  desk2ha-vendor-analysis.md
scripts/: generate-models.sh  generate-release-notes.py  lint.sh  predeploy.sh  publish.sh  release.sh
tests/: conftest.py  test_config_flow.py  test_discovery.py  test_entity_availability.py  test_helpers.py  test_image_cache.py  test_image_resolver.py  test_policy_store.py  test_sensor_utils.py  test_version_consistency.py
