[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/desk2ha"]

[project]
name = "hass-desk2ha"
version = "0.1.0"
description = "Desk2HA — Home Assistant integration for multi-vendor desktop monitoring"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "maximusIIxII" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

[project.optional-dependencies]
dev = [
    "homeassistant>=2024.4",
    "pytest-homeassistant-custom-component>=0.13",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/maximusIIxII/hass-desk2ha"
Repository = "https://github.com/maximusIIxII/hass-desk2ha"
Issues = "https://github.com/maximusIIxII/hass-desk2ha/issues"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Embedded shell/PowerShell templates contain long lines by necessity
"custom_components/desk2ha/install_server.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
